[package]
name="ptime"
version="0.2.0"
authors=["Navid Fathollahzade <yaa110@gmail.com>", "Mahdi Robatipoor <mahdi.robatipoor@gmail.com>"]
description="The implementation of the Persian (Solar Hijri) Calendar"
homepage="https://github.com/yaa110/rust-persian-calendar"
documentation="https://github.com/yaa110/rust-persian-calendar"
repository="https://github.com/yaa110/rust-persian-calendar"
readme="README.md"
keywords=["persian", "calendar", "date", "shamsi", "time"]
categories=["date-and-time"]
license="MIT"
edition="2018"

[lib]
name="ptime"

[dependencies]
time = "0.2.25"
rand = { version = "0.8.3", default-features = false }
serde = { version = "1.0.123", default-features = false }
strum = { version = "0.20.0", features = ["derive"] }
